# GooStats

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  .syntastic_cpp_config  .travis.yml  AUTHOR.md  CMakeLists.txt  LICENSE  LSan.supp  README.md  codecov.yml
.github/workflows/: autoTest.yml  cpp-linter.yaml
GooFit/: CMakeLists.txt  ChangeLog  INSTALL.md  Makefile  README.md
GooFit/cmake/: AddThrust.cmake  CUDAsafeAddLibraryAndExe.cmake  Config.cmake.in
GooFit/docs/: documentation.md
GooFit/examples/: CMakeLists.txt
GooFit/include/goofit/: BinnedDataSet.h  DataSet.h  FitControl.h  FitManager.h  FitManagerMinuit1.h  FunctorWriter.h  GlobalCudaDefines.h  PdfBase.h  UnbinnedDataSet.h  Variable.h
GooFit/include/goofit/PDFs/: ExpPdf.hh  GooPdf.h
GooFit/src/PDFs/: CMakeLists.txt  CMakeLists.txt.bak  ExpPdf.cu  FitControl.cu  GooPdf.cu  PdfBase.cu
GooFit/src/goofit/: BinnedDataSet.cc  CMakeLists.txt  DataSet.cc  Faddeeva.cc  FitControl.cc  FitManager.cc  FitManagerMinuit1.cc  FunctorWriter.cc  GenVoigtian.cc  PdfBase.cc  UnbinnedDataSet.cc
GooFit/src/rootstuff/: CMakeLists.txt  TRandom3.cc
GooFit/test/: CMakeLists.txt  SumPdf.cu  SumPdf.h  exponential.cu
Kernel/include/: AnalysisManager.h  BasicManager.h  BasicManagerImpl.h  BasicSpectrumBuilder.h  BestFitFixture.h  ConfigsetManager.h  Database.h  DatasetController.h  DatasetManager.h  GPUManager.h  GooStatsException.h  GooStatsNLLCheck.h  GooStatsNLLCheckLinkDef.h  IOptionParser.h  ISpectrumBuilder.h  InputBuilder.h  InputManager.h  Module.h  MultiComponentDatasetController.h  NLLCheckFixture.h  OptionManager.h  OutputBuilder.h  (+6 more)
Kernel/src/: AnalysisManager.cc  BasicManager.cc  BasicManagerImpl.cc  BasicSpectrumBuilder.cc  BestFitFixture.cc  CMakeLists.txt  Database.cc  DatasetController.cpp  DatasetManager.cc  GPUManager.cu  GooStatsNLLCheck.cc  InputManager.cc  Module.cc  MultiComponetDatasetController.cc  NLLCheckFixture.cc  OptionManager.cc  OutputHelper.cc  ParSyncManager.cc  RawSpectrumProvider.cc  SpectrumBuilder.cc  TextOutputManager.cc  Utility.cc
Modules/: Borexino  CMakeLists.txt
Modules/naive-Juno/: CMakeLists.txt  Makefile  juno.cc
Modules/naive-Juno/data/: bkg2.txt
Modules/naive-Juno/include/: JunoAnalysisManager.h  JunoDatasetController.h  JunoInputBuilder.h  JunoSpectrumBuilder.h  ReactorSpectrumPdf.h
Modules/naive-Juno/src/: CMakeLists.txt  JunoAnalysisManager.cc  JunoDatasetController.cc  JunoInputBuilder.cc  JunoSpectrumBuilder.cc
Modules/naive-Reactor/: .gitignore  .syntastic_cpp_config  CMakeLists.txt  IBD.cfg  Makefile  data.cfg  data_nuE.cfg  data_recE.cfg  fit.sh  fitdata.sh  reactor.cc  toyMC.cfg  toyMC_recE.cfg
Modules/naive-Reactor/Test/: CMakeLists.txt  autoTest.cc  species.icc
Modules/naive-Reactor/data/: NLL_CHECK_gpu.root  bkg.txt  data_hist.root  plotEvPPS.root  plotEvPPSHTAsimov.root  plotEvPPSHTRND.root  plotEvPPS_tree.root
Modules/naive-Reactor/include/: NMOTest.h  NeutrinoOscillationPdf.h  NewExpPdf.hh  ReactorAnalysisManager.h  ReactorDatasetController.h  ReactorInputBuilder.h  ReactorSpectrumBuilder.h
Modules/naive-Reactor/src/: CMakeLists.txt  IBDPdf.cu  NMOTest.cc  NeutrinoOscillationPdf.cu  NewExpPdf.cu  ReactorAnalysisManager.cc  ReactorDatasetController.cc  ReactorInputBuilder.cc  ReactorSpectrumBuilder.cc  ReactorSpectrumPdf.cu
PDFs/src/: CMakeLists.txt  DarkNoiseConvolutionPdf.cu  DumperPdf.cu  ExpPullPdf.cu  GeneralConvolutionPdf.cu  GooStatsSumPdf.cu  HistogramPdf.cu  IBDPdf.cu  IntegralInsideBinPdf.cu  Mach4GGResponseFunctionPdf.cu  Mach4GGResponseFunctionPdf_impl.cu  MultiVariatePdf.cu  MultiVariatePdf.icc  NeutrinoOscillationPdf.cu  PdfCache.cu  PoissonPullPdf.cu  ProductPdf.cu  PullPdf.cu  RangedExpPdf.cu  RatioPullPdf.cu  ReactorSpectrumPdf.cu  ResponseFunctionPdf.cu  ResponseFunctionPdf_NLRES.cu  ResponseFunctionPdf_impl.cu  SumLikelihoodPdf.cu  SumPdf.cu
SimplePackage/src/: CMakeLists.txt  PrepareData.cc  PullDatasetController.cc  SimpleDatasetController.cc  SimpleInputBuilder.cc  SimpleOptionParser.cc  SimpleOutputBuilder.cc  SimplePlotManager.cc  SimpleSpectrumBuilder.cc
StatModules/src/: BatchOutputManager.cc  CMakeLists.txt  ContourManager.cc  CorrelationManager.cc  DiscoveryTest.cc  GSFitManager.cc  OutputManager.cc  PlotManager.cc  ScanPar.cc  SimpleFit.cc  StatModule.cc  ToyMCLikelihoodEvaluator.cc
docs/: DEVELOPER.md  FAQ.md  INSTALL.md  Known_Issues.md  README.md
include/: AnalysisManager.h  BasicManager.h  BasicManagerImpl.h  BatchOutputManager.h  BestFitFixture.h  Bit.h  ConfigsetManager.h  ContourManager.h  CorrelationManager.h  DatasetController.h  DatasetManager.h  DeclareModule.h  GPUManager.h  GSFitManager.h  IDataManager.h  InputBuilder.h  InputConfig.h  InputManager.h  Module.h  ModuleFactory.h  ModuleManager.h  OptionManager.h  OutputBuilder.h  OutputHelper.h  OutputManager.h  PlotManager.h  PullDatasetController.h  SimpleDatasetController.h  SimpleInputBuilder.h  SimpleOptionParser.h  SimpleOutputBuilder.h  SimplePlotManager.h  SpectrumBuilder.h  TextOutputManager.h  ToyMCLikelihoodEvaluator.h  Utility.h
setup/: compile.sh  download.sh  upload.sh
src/: AnalysisManager.cc  BasicManager.cc  BasicManagerImpl.cc  BasicSpectrumBuilder.cc  BatchOutputManager.cc  BestFitFixture.cc  CMakeLists.txt  ConfigsetManager.cc  ContourManager.cc  CorrelationManager.cc  DatasetManager.cc  DeclareModule.cc  GPUManager.cu  GSFitManager.cc  InputManager.cc  ModuleFactory.cc  ModuleManager.cc  OutputHelper.cc  OutputManager.cc  ParSyncManager.cc  PlotManager.cc  PullDatasetController.cc  SimpleDatasetController.cc  SimpleInputBuilder.cc  SimpleOptionParser.cc  SimpleOutputBuilder.cc  SimplePlotManager.cc  SpectrumBuilder.cc  TextOutputManager.cc  ToyMCLikelihoodEvaluator.cc  Utility.cc
tests/: CMakeLists.txt  NLL_CHECK_reference.root  NLLcheck.sh  NLLtest.cc  fit.cc  fit.h  run.cc  simpleFit.cc  toyMC.cfg
tests/Kernel/: BasicManagerTest.cc  CMakeLists.txt  DatabaseTest.cc  UtilityTest.cc
tests/SimplePackage/: CMakeLists.txt  SimpleInputBuilderTest.cc  test.cfg
tests/data/: fbkg.txt  generate.C
(+67 files in other folders)
