include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include")
add_subdirectory(src)
add_executable(juno juno.cc)
target_compile_features(juno PRIVATE cxx_range_for)
target_link_libraries(juno juno_module juno_gpu_module)
target_link_libraries(juno GooStatsLib GooStatsLib_gpu GooStatsPDFs GOOFIT::goofit_lib)
target_link_libraries(juno AllGPU)
